Fixed a bug which caused a gap to appear in products using team sidebear when user had only 1 team

--- a/sass/layout/_team-sidebar.scss
+++ b/sass/layout/_team-sidebar.scss
@@ -1,5 +1,5 @@
 .team-sidebar {
-    position: fixed;
+    height: 100%;
     z-index: 17;
     bottom: 0;
     left: 0;
@@ -162,15 +162,13 @@
         --sidebar-teambar-bg-rgb: var(--sidebar-header-bg-rgb);
         --sidebar-header-text-color-rgb: var(--sidebar-text-rgb);
 
-        // adjust height of team sidebar
-        height: calc(100% - 40px);
         border-right: solid 1px rgba(var(--center-channel-color-rgb), 0.08);
     }
 }
 
 .product-wrapper {
     width: calc(100% - 65px);
-    height: calc(100% - 40px);
+    height: 100%;
     margin-left: auto;
 
     &.wide {
